# Game_backend

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  project_report.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: middleware.py  rest_routes.py  ws_routes.py
app/core/: game_engine.py  matchmaking.py  redis_pubsub.py  session_manager.py  ws_manager.py
app/models/: database.py  redis_models.py  schemas.py
app/persistence/: __init__.py  database.py  repositories.py
app/utils/: auth.py  constants.py  logging.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
frontend/: app.js  index.html  styles.css
scripts/lua/: claim_room.lua  matchmaking_pop.lua
tests/: conftest.py  test_game_engine.py  test_integration.py  test_matchmaking.py  test_session_manager.py  test_ws_manager.py
